<resources>
    <string name="app_name">Tip Calculator</string>
    <string name="question_ipt">Enter bill amount: </string>
    <string name="tip_select">Select tip</string>
    <string name="tip">Tip: </string>
    <string name="total">Total: </string>

    <string name="tipAmount">0</string>
    <string name="totalAmount">0</string>

    <string name="ten_percent">10%</string>
    <string name="fifteen_percent">15%</string>
    <string name="eighteen_percent">18%</string>
    <string name="twenty_percent">20%</string>
</resources>