<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <TextView
        android:id="@+id/billQuestion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/question_ipt"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintVertical_bias=".028"
        app:layout_constraintBottom_toBottomOf="parent"/>


    <EditText
        android:id="@+id/billEdit"
        android:layout_width="@dimen/marginETWidth"
        android:layout_height="@dimen/marginETHeight"
        android:backgroundTint="@color/purple_500"
        android:inputType="numberDecimal"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">
    </EditText>

    <TextView
        android:id="@+id/selectTip"
        android:text="@string/tip_select"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/billEdit" />

    <RadioGroup
        android:id="@+id/tipOptionsRadio"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/selectTip">

        <RadioButton
            android:id="@+id/tenPercent"
            android:text="@string/ten_percent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <RadioButton
            android:id="@+id/fifteenPercent"
            android:text="@string/fifteen_percent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <RadioButton
            android:id="@+id/eighteenPercent"
            android:text="@string/eighteen_percent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <RadioButton
            android:id="@+id/twentyPercent"
            android:text="@string/twenty_percent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </RadioGroup>

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tipOptionsRadio">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/tipField"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="end"
                android:text="@string/tip" />

            <TextView
                android:id="@+id/tipFieldFill"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="end"
                android:layout_marginHorizontal="@dimen/tablePos"
                android:text="@string/tipAmount" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/totalAmountField"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="end"
                android:text="@string/total" />

            <TextView
                android:id="@+id/totalAmountFieldFill"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="end"
                android:layout_marginHorizontal="@dimen/tablePos"
                android:text="@string/tipAmount"/>
        </TableRow>
    </TableLayout>

</androidx.constraintlayout.widget.ConstraintLayout>